--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,11 @@
 services:
   - type: web
     name: gerador-conteudo-facebook
-    env: python
+    env: docker
     region: oregon
     plan: free
-    buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: cd backend && gunicorn -w 2 -b 0.0.0.0:$PORT app:app --timeout 120
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
       - key: OPENAI_API_KEY
         sync: false
 
